# discord-bot-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: main.rs
src/commands/: math.rs  misc.rs  mod.rs  music.rs
src/handlers/: idle.rs  mod.rs
